crates/vigil-core/src/databases/fs/tests/snapshots/vigil_core__databases__fs__tests__wal__can_retrieve_record_based_on_midpoints_alone.snap
---
source: crates/vigil-core/src/databases/fs/tests/wal.rs
expression: blocks
---
limit: 128
offset: 0
buf:
  - 21
  - 0
  - 0
  - 0
  - 1
  - 0
  - 0
  - 0
  - 0
  - 0
  - 0
  - 0
  - 1
  - 123
  - 5
  - 0
  - 72
  - 101
  - 108
  - 108
  - 111
  - 67
  - 242
  - 195
  - 203
  - 21
  - 0
  - 0
  - 0
  - 24
  - 0
  - 0
  - 0
  - 2
  - 0
  - 0
  - 0
  - 0
  - 0
  - 0
  - 0
  - 2
  - 255
  - 8
  - 0
  - 44
  - 32
  - 87
  - 111
  - 114
  - 108
  - 100
  - 33
  - 56
  - 210
  - 66
  - 134
  - 24
  - 0
  - 0
  - 0
mid_freq: 12
last_mid_offset: 29
midpoints:
  - 0
  - 29
