crates/vigil-core/src/databases/fs/tests/snapshots/vigil_core__databases__fs__tests__wal__detect_not_enough_space_zero_offset.snap
---
source: crates/vigil-core/src/databases/fs/tests/wal.rs
expression: blocks.open(129)
---
Err: OutOfSpace
