crates/vigil-core/src/databases/fs/tests/snapshots/vigil_core__databases__fs__tests__wal__detect_segment_is_full.snap
---
source: crates/vigil-core/src/databases/fs/tests/wal.rs
expression: writer.append(&record)
---
Err: OutOfSpace
