crates/vigil-core/src/databases/fs/tests/snapshots/vigil_core__databases__fs__tests__wal__detect_written_too_little.snap
---
source: crates/vigil-core/src/databases/fs/tests/wal.rs
expression: buf.finalize()
---
Err: WroteTooLittle
