crates/vigil-core/src/databases/fs/tests/snapshots/vigil_core__databases__fs__tests__wal__detect_written_too_much.snap
---
source: crates/vigil-core/src/databases/fs/tests/wal.rs
expression: buf.put_u64_le(123)
---
Err: WroteTooMuch
