crates/vigil-core/src/databases/fs/tests/snapshots/vigil_core__databases__fs__tests__wal__log_record_reader_iterator.snap
---
source: crates/vigil-core/src/databases/fs/tests/wal.rs
expression: records
---
- lsn: 1
  op: Put
  content_type:
    Unknown: 123
  data:
    - 72
    - 101
    - 108
    - 108
    - 111
- lsn: 2
  op: Delete
  content_type:
    Unknown: 255
  data:
    - 44
    - 32
    - 87
    - 111
    - 114
    - 108
    - 100
    - 33
