crates/vigil-core/src/databases/fs/tests/snapshots/vigil_core__databases__fs__tests__wal__midpoint_added_because_threshold_reached.snap
---
source: crates/vigil-core/src/databases/fs/tests/wal.rs
expression: blocks
---
limit: 128
offset: 0
buf:
  - 29
  - 0
  - 0
  - 0
  - 1
  - 0
  - 0
  - 0
  - 0
  - 0
  - 0
  - 0
  - 1
  - 123
  - 13
  - 0
  - 72
  - 101
  - 108
  - 108
  - 111
  - 44
  - 32
  - 87
  - 111
  - 114
  - 108
  - 100
  - 33
  - 56
  - 58
  - 111
  - 81
  - 29
  - 0
  - 0
  - 0
mid_freq: 12
last_mid_offset: 0
midpoints:
  - 0
