crates/vigil-core/src/databases/fs/tests/snapshots/vigil_core__databases__fs__tests__wal__parsed_footer.snap
---
source: crates/vigil-core/src/databases/fs/tests/wal.rs
expression: actual
---
Ok:
  sealed: false
  first_lsn: 123
  last_lsn: 0
  checksum: 0
